--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="js/freeboard.thirdparty.min.js"></script>
     <script type="text/javascript">
         head.js("js/freeboard_plugins.min.js",
+                "plugins/historic.sparkline.js",
                 // *** Load more plugins here ***
                 function(){
                     $(function()
